Fix fonts, upgrade npm packages, fix spacing and misaligned braces

--- a/linter/src/Components/SidePanel.css
+++ b/linter/src/Components/SidePanel.css
@@ -1,6 +1,6 @@
 .results {
     margin-top:1.5em;
-    font-family: "Segoe UI";
+    font-family: "Segoe UI", Verdana, sans-serif;;
     color: #212121;
     font-size: 13px;
     background-color: transparent;
@@ -14,13 +14,13 @@
 
 .title {
     font-size: 18px;
-    font-family: "Segoe UI";
+    font-family: "Segoe UI", Verdana, sans-serif;;
     font-weight: 700;
     background-color: transparent;
 }
 
 .found-count {
-    font-family: "Segoe UI";
+    font-family: "Segoe UI", Verdana, sans-serif;;
     font-weight: 500;
 }
 
