--- a/linter/src/index.css
+++ b/linter/src/index.css
@@ -27,7 +27,7 @@ body {
 }
 
 footer {
-  font-family: "Segoe UI";
+  font-family: "Segoe UI", Verdana, sans-serif;;
   font-size: 10pt;
   text-align: center;
   margin-top: 30px;
